gtk+3.0 (3.20.6-2) UNRELEASED; urgency=medium

  * Drop patches/015_default-fallback-icon-theme.patch: The default icon theme
    is already defined as Adwaita, not need to also define the fallback theme.

 -- Laurent Bigonville <bigon@debian.org>  Sun, 05 Jun 2016 02:29:49 +0200

gtk+3.0 (3.20.6-1) unstable; urgency=medium

  * New upstream release.
  * Drop revert-scrolledwindow-Remove-child-before-destroying.patch, merged
    upstream.
  * Re-enable test-suite.

 -- Michael Biebl <biebl@debian.org>  Tue, 31 May 2016 21:33:34 +0200

gtk+3.0 (3.20.5-4) unstable; urgency=medium

  * Work around a bug in cdbs which causes the package to FTBFS; see #825135
    for further details.

 -- Michael Biebl <biebl@debian.org>  Thu, 26 May 2016 08:08:16 +0200

gtk+3.0 (3.20.5-3) unstable; urgency=medium

  * Make it simpler to bootstrap the package by marking the build dependencies
    which are required to run the test-suite with <!nocheck>.
    (Closes: #747392)
  * Bump Build-Depends on debhelper to (>= 9.20141010) and dpkg-dev to
    (>= 1.17.14) for build dependency restrictions support.
  * Temporarily disable the test suite (and its build-dependencies) to allow
    building the new gtk-update-icon-cache package. Our buildds don't support
    build profiles yet, so we'll have to bootstrap manually for now.

 -- Michael Biebl <biebl@debian.org>  Mon, 23 May 2016 01:01:27 +0200

gtk+3.0 (3.20.5-2) unstable; urgency=medium

  * Split gtk-update-icon-cache utility out of libgtk-3-bin into a separate
    package called gtk-update-icon-cache to break a dependency cycle with
    adwaita-icon-theme when building the package. (Closes: #824999)
    As the gtk-update-icon-cache binary doesn't actually have any libgtk-3-0
    dependency, there is no longer a reason to ship a gtk2 and gtk3 variant.
    So from now on we will only ship one implementation built from src:gtk+3.0
    and drop the Debian specific -3.0 suffix. To simplify the transition make