@@ -1,7 +1,12 @@
 gtk+3.0 (3.20.6-2) UNRELEASED; urgency=medium
 
+  [ Laurent Bigonville ]
   * Drop patches/015_default-fallback-icon-theme.patch: The default icon theme
     is already defined as Adwaita, not need to also define the fallback theme.
+
+  [ Simon McVittie ]
+  * d/rules: reset XDG_CONFIG_HOME, XDG_CACHE_HOME, XDG_DATA_HOME so that
+    they are based on the temporary HOME
 
  -- Laurent Bigonville <bigon@debian.org>  Sun, 05 Jun 2016 02:29:49 +0200
 
